# QSim0.1

scripts/: build.sh  sandbox_1d.sh  test.sh
src/: CMakeLists.txt
src/qsim/: CMakeLists.txt
src/qsim/include/qsim/: distributions.h  qsim1d.h
src/qsim/source/: CMakeLists.txt  distributions.cpp  qsim1d.cpp
src/qsim_sandbox_1d/: CMakeLists.txt  app.cpp  app.h  colors.h  main.cpp
src/qsim_test/: CMakeLists.txt  main.cpp
src/qsim_test/tests/: test_qsim1d.h
